Improved visibily (separately) of "related issue" links within an issue, actual issue links in list. Removed huge spacing in wiki lists.

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -114,7 +114,8 @@ table.list td { padding: 4px; }
 table.list input[type="checkbox"] { margin-top: 6px; }
 table.list tbody tr.group span.count { -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; background-color: #eee; color: #999; text-shadow: 0 1px 0 white; font-weight: bold; font: 12px Helvetica, arial, freesans, clean, sans-serif; line-height: 1.4; padding: 2px 5px; -webkit-box-shadow: inset 0 -1px 0 #e3e3e3; -moz-box-shadow: inset 0 -1px 0 #e3e3e3; box-shadow: inset 0 -1px 0 #e3e3e3; }
 table.list tbody tr:hover { background-color: #EFF5F8; }
-table.list tr.issue a { color: #666; }
+table.list tr.issue a { color: #458; }
+table.list tr.issue a.issue { color: #56F; }
 
 /*tr.odd {background-color: transparent;}
 tr.even {background-color: transparent;}
@@ -212,7 +213,7 @@ img.gravatar { -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05); -moz-box-sha
 .controller-wiki div#content > div.wiki { padding: 0 8px 8px 8px; }
 
 div.wiki { line-height: 1.7; }
-div.wiki p, div.wiki blockquote, div.wiki ul, div.wiki ol, div.wiki dl, div.wiki table, div.wiki pre { margin: 15px 0; }
+/* div.wiki p, div.wiki blockquote, div.wiki ul, div.wiki ol, div.wiki dl, div.wiki table, div.wiki pre { margin: 15px 0; } */
 div.wiki ul, div.wiki ol { padding-left: 30px; }
 div.wiki h1 { font-size: 28px; }
 div.wiki h2 { font-size: 20px; }
